web-infras/parser/tests/fixtures/babel/es2015/statements/label-invalid-func-strict/output.txt
[SyntaxError]: In strict mode code, functions can only be declared at top level or inside a block. (1,36)
1|function foo() {"use strict"; bar: function baz() {}}
 |                                  ^
